fixed Log a new beer toggle card

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </section>
 
         <div class="card createBeerCard">
-        <h2 class="card-header text-center" style="height: 3rem">Log A Beer!</h2>
+        <h2 class="card-header createBeerCard text-center" style="height: 3rem">Log A Beer!</h2>
         <form id="create-beer">
           <div class="form-group">
             <label for="BeerName">Beer Name*</label>
