move Brew Share logo to repo, updated styling on new beer form

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       
       <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-          <img src="https://imgur.com/nNMT0mA.jpg" width="30" height="30" class="d-inline-block align-top wdn-stretch rounded-corners" alt="">
+          <img src="public/BrewShareLogo.png" width="32" height="32" class="d-inline-block align-top wdn-stretch rounded-corners" alt="">
         </a>
 
         <section class="sign-out .ml-auto">
